--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
             I always take responsibility for my work trying to achieve the best
             results.
           </p>
+
+          <!-- my projects -->
+          <div class="project"></div>
+          <h3 class="title">Portfolio</h3>
+          <ul class="work-list">
+              <li class="work-list-item">
+                <a
+                  href="https://catrisx.github.io/bakery/"
+                  class="exp"
+                  > Website for Modern bakery</a
+                >
+              </li>
+            </ul>
+          
         </div>
       </div>
 
