--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <a
                   href="https://catrisx.github.io/bakery/"
                   class="exp"
-                  > Website for Modern bakery</a
+                  > Modern bakery website</a
                 >
               </li>
             </ul>
